test/libsolidity/syntaxTests/abiEncoder/conflicting_settings_reverse.sol
pragma abicoder v1;
pragma abicoder v2;
// ----
// SyntaxError 3845: (20-39): ABI coder has already been selected for this source unit.
